<resources>
    <string name="app_name">Examen1</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="nombre">Ingresar Nombre</string>
    <string name="correo">Ingresar Correo Electrónico</string>
    <string name="password">Ingresar Contraseña</string>
    <string name="sesion">Iniciar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>